<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always|withText"
        android:title="@string/menu_refresh">
    </item>
    <item
        android:id="@+id/menu_radar"
        android:icon="@drawable/ic_action_radar"
        android:showAsAction="always|withText"
        android:title="@string/menu_radar">
    </item>
    <item
        android:id="@+id/menu_view_online"
        android:icon="@drawable/ic_action_online"
        android:showAsAction="ifRoom"
        android:title="@string/menu_view_online">
    </item>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always|withText"
        android:title="@string/menu_add"></item>
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always|withText"
        android:title="@string/menu_edit"></item>
    <item
        android:id="@+id/menu_prefs"
        android:icon="@drawable/ic_action_prefs"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_prefs"></item>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_about"></item>

</menu>